--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
-.table {
-
+* {
+  font-size: 28px;
+  font-family:Amaranth, Helvetica, sans-serif;
 }
 
-.td {
-  width:auto;
+h1 {
+  height:100px;
+  border: solid red 2px;
+  padding-left: 20px;
 }
 
 #letters {
@@ -27,4 +30,22 @@
 
 .gallows img {
   height: 100%;
+}
+
+#win {
+  display:none;
+  opacity:0;
+}
+
+#lose {
+  display:none;
+  opacity:0;
+  margin-top:0px;
+  text-align: center;
+  padding:50px;
+  border:solid red 2px;
+}
+
+#lose span:hover{
+  cursor: pointer;
 }
